--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "engines": { 
     "node" : ">=0.6.0" 
   }, 
-  "licenses": [{ 
+  "licenses": [{
+    "type": "MIT",
     "url": "http://github.com/nodetime/nodetime-native/raw/master/LICENSE"
   }]
 }
